--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,18 +40,92 @@ header ul li a.momoland{
     background: linear-gradient(rgba(224, 248, 248, 0.2),rgba(93, 205, 224, 0.2)),url('../imp/momoland3.jpg');
     background-size: 100% 100%;
     padding: 0px 125px;
+    position: relative;
 }
-h2{
+.banner h1{
+    position: absolute;
+    top: 95px;
+    font-weight:normal;
     font-size: 53px;
-    font-weight: 200;
-    padding-top: 95px;
 }
 span{
     display: flex;
+    margin-left: 15px;
 }
-h3{
+.banner h2{
+    position: absolute;
+    top: 240px;
     font-size: 25px;
     font-weight: 600;
-    padding-top: 19px;
+    
 }
+.banner form{
+    width: 85%;
+    bottom: 10px;
+    height: 125px;
+    padding: 1px 12px;
+    background:#61307E;
+    display: flex;
+    align-items: center;
+    position: absolute;
+   
+}
+.banner form button{
+    width: 150px;
+    height: 35px;
+    border: none;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 400;
+    background: #502F71;;
+}
+.banner form button.active{
+    background: #FE2D42;
+}
+ .banner form .searchForm{
+    margin-top: 8px;
+}
+.banner form .searchForm label{
+    display: none;
+}
+.banner form .searchForm input,
+.banner form .searchForm select{
+    width: 270px;
+    height: 35px;
+}
+.banner form .searchForm input[type='text'],
+.banner form .searchForm input[type='date'],
+.banner form .searchForm select{
+    text-align: center;
+}
+.banner form .searchForm input[type='text']{
+    margin-right:  5px;
+}
+.banner form .searchForm select{
+    margin-left: 5px;
+}
+.banner form button.search{
+    width: 110px;
+    height: 110px;
+    background: #FE2D42;
+    margin-left: 55px;
+    border-radius: 50%;
+}
+
+.banner form .ticketType{
+   
+    margin-top: 8px;
+}
+.banner form .ticketType select{
+    width: 250px;
+    height: 35px;
+    padding-left: 50px;
+    margin-right: 20px;
+    border: none;
+    color: #fff;
+    background:#61307E ;
+    text-decoration:  underline;
+}
+
+
 /* banner section end */
